Domibus 3.3-FR
- Block receiving of message in case the sender's certificate is not valid or revoked.
Three more properties added (check domibus.properties for details):
    o domibus.sending.certificate.validation.receiver.enabled (default true)
    o domibus.sending.certificate.validation.sender.enabled (default true)
    o domibus.receiving.certificate.validation.sender.enabled (default true)
Domibus 3.3-RC1
- Configuration of Domibus is done with domibus.properties instead of externalized spring xml files
- Add the possibility to pull messages
- Expose the DOWNLOADED message status in the plugin API and the default ws plugin
- Deprecated the methods eu.domibus.plugin.AbstractBackendConnector.getMessageStatus(String messageId) and eu.domibus.plugin.handler.MessageRetriever.getMessageStatus(String messageId) which converts the DOWNLOADED status to RECEIVED. Use the new getStatus(String messageId) method instead.
- Deprecated the following methods from eu.domibus.plugin.webService.impl.BackendWebServiceImpl in the Default WS Plugin:
    o sendMessage(SubmitRequest, Messaging). Use submitMessage(SubmitRequest, Messaging) which add support for large files.
    o downloadMessage(RetrieveMessageRequest, Holder, Holder). Use retrieveMessage(RetrieveMessageRequest, Holder, Holder) which add support for large files.
    o getMessageStatus(StatusRequest). Use getStatus(StatusRequest) which converts the DOWNLOADED status to RECEIVED.
- Migrated the logging framework to SLF4J and Logback
- Domibus uses 3 logs files: domibus.log, domibus-business.log and domibus-security.log
- JMS monitoring: fixed the computation of the total number of messages in the queue for WebLogic
- JMS monitoring: fixed the search of the JMS messages for WebLogic(for JMS messages having property with null values) and Tomcat(for JMS messages with no "Text" property)
- JMS monitoring: extended the functionality for clustered installations.