@@ -21,9 +21,20 @@ domibus.deployment.clustered=false
 #The factory for creating SOAPMessage objects
 messageFactoryClass=com.sun.xml.internal.messaging.saaj.soap.ver1_2.SOAPMessageFactory1_2Impl
 
+
 #If activated Domibus will verify before sending a User Message if the receiver's certificate is valid and not revoked. If the receiver's certificate is not valid or it has been revoked
-#Domibus will not send the message and it will mark it as SEND_FAILURE
-domibus.certificate.validation.enabled=true
+#Domibus will not send the message and it will mark it as SEND_FAILURE (default is true)
+domibus.receiver.certificate.validation.onsending=true
+#If activated Domibus will verify before sending a User Message if his own certificate is valid and not revoked. If the certificate is not valid or it has been revoked
+#Domibus will not send the message and it will mark it as SEND_FAILURE (default is true)
+domibus.sender.certificate.validation.onsending=true
+#If activated Domibus will verify before receiving a User Message if the sender's certificate is valid and not revoked. If the certificate is not valid or it has been revoked
+#Domibus will not accept the message (default is true)
+domibus.sender.certificate.validation.onreceiving=true
+#If activated Domibus will verify before receiving a User Message if the sender's party name is part of the CN in the sender's certificate. If not,
+#Domibus will not accept the message (default is false)
+domibus.sender.trust.validation.onreceiving = false
+
 
 #Timeout values for communication between the access points
 #ConnectionTimeOut - Specifies the amount of time, in milliseconds, that the consumer will attempt to establish a connection before it times out. 0 is infinite.
